--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+
+    "StringConexao": "Persist Security Info=False;User ID=sa;Data Source=RUBENS\\SQLEXPRESS"
   }
 }
+
