--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,20 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "StringConexao": "Persist Security Info=False;User ID=sa;Data Source=RUBENS\\SQLEXPRESS"
+  },
+  "ApiCep": {
+    "BaseUrl": "https://viacep.com.br/ws/"
+  }
+} 
+  
+
+  
+
+ 
+
+
+  
