--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "StringConexao": "Persist Security Info=False;User ID=sa;Data Source=RUBENS\\SQLEXPRESS"
+    "StringConexao": "Data Source=SQL8002.site4now.net;Initial Catalog=db_a9109b_jovemprogramador;User Id=db_a9109b_jovemprogramador_admin;Password=rubens0@"
   },
   "ApiCep": {
     "BaseUrl": "https://viacep.com.br/ws/"
